stdouts/nap-gui
/root/Targets/nap-gui
└── nap-gui@0.1.0 

Setup Done exists, not setting up
:../FeatureTester/libs/:/root/Targets/nap-gui/node_modules
Set Default Z3_PATH to ./node_modules/z3javascript/bin/libz3.so
ExpoSE Master: /root/ExpoSE/lib/Harness/src/harness.js max concurrent: 16 max paths: 1000000
Setting timeout to 900000
*** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [1 done /0 queued / 0 running / 1 errors / 88% coverage ] ***
*-- Stat Module Output --*
*-- concretizations: ["defineProperty","bound log","call","RegExp","charCodeAt","max","lastIndexOf","pop","toUpperCase","apply","SyntaxError"]
*-- Stat Module Done --*
*-- Test Case {"_bound":0} start 0.0409 took 40.5838s
*-- Errors occured in test {"_bound":0}
* Error: [stdin]:138:24: error: reserved word "package" can't be assigned
module.exports.package = (callback = ->) =>
                       ^
*-- Replay with NO_COMPILE=1 expoSE replay '/root/ExpoSE/lib/Harness/src/harness.js' '{"_bound":0}'
*-- Coverage Data
*- File /root/ExpoSE/lib/Harness/src/harness.js. Coverage (Term): 18% Coverage (LOC): 24%
*- File /root/ExpoSE/lib/S$/bin/symbols.js. Coverage (Term): 16% Coverage (LOC): 34%
*- File /root/Targets/nap-gui/node_modules/nap-gui/lib/index.js. Coverage (Term): 78% Coverage (LOC): 91%
*- File /root/Targets/nap-gui/node_modules/coffee-script/lib/coffee-script/coffee-script.js. Coverage (Term): 16% Coverage (LOC): 21%
*- File /root/Targets/nap-gui/node_modules/coffee-script/lib/coffee-script/lexer.js. Coverage (Term): 76% Coverage (LOC): 82%
*- File /root/Targets/nap-gui/node_modules/coffee-script/lib/coffee-script/rewriter.js. Coverage (Term): 11% Coverage (LOC): 29%
*- File /root/Targets/nap-gui/node_modules/coffee-script/lib/coffee-script/helpers.js. Coverage (Term): 40% Coverage (LOC): 48%
*- File /root/Targets/nap-gui/node_modules/coffee-script/lib/coffee-script/parser.js. Coverage (Term): 81% Coverage (LOC): 98%
*- File /root/Targets/nap-gui/node_modules/coffee-script/lib/coffee-script/sourcemap.js. Coverage (Term): 17% Coverage (LOC): 22%
*- File /root/Targets/nap-gui/node_modules/coffee-script/lib/coffee-script/nodes.js. Coverage (Term): 14% Coverage (LOC): 26%
*- File /root/Targets/nap-gui/node_modules/coffee-script/lib/coffee-script/scope.js. Coverage (Term): 18% Coverage (LOC): 28%
*- Re-run with EXPOSE_PRINT_COVERAGE=1 to print line by line coverage information
** ExpoSE Finished. 1 paths with 1 errors **
